Migrate build tool oasis to dune

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,46 +1,29 @@
-# OASIS_START
-# DO NOT EDIT (digest: bc04e47b332ac491b8ae5d576c98342b)
-
-SETUP = ocaml setup.ml
-
-build: setup.data
-	$(SETUP) -build $(BUILDFLAGS)
-
-doc: setup.data build
-	$(SETUP) -doc $(DOCFLAGS)
-
-test: setup.data build
-	$(SETUP) -test $(TESTFLAGS)
-
-all:
-	$(SETUP) -all $(ALLFLAGS)
-
+build:
+	dune build
 clean:
-	$(SETUP) -clean $(CLEANFLAGS)
+	dune clean
+uninstall:
+	dune uninstall
+install:
+	dune install
+doc:
+	dune build @doc
+test:
+	dune test -f
+run:
+	-BISECT_FILE=_build/bisect_main BOLT_CONFIG=resources/bolt_new.conf \
+		dune exec src/$(parent)/main.exe $(ARGS)
 
-distclean:
-	$(SETUP) -distclean $(DISTCLEANFLAGS)
-
-setup.data:
-	$(SETUP) -configure $(CONFIGUREFLAGS)
-
-configure:
-	$(SETUP) -configure $(CONFIGUREFLAGS)
-
-.PHONY: build doc test all clean distclean configure
-
-# OASIS_STOP
-
-prefix = $(shell $(SETUP) -configure | sed -n 's|Install architecture-independent files dir: [.]* \(.*\)|\1|p')
+prefix ?= /usr/local
 
 PKG_CONFIG = pkg-config --with-path=$(prefix)/lib/pkgconfig
 
 parent = intro_ml
 pkg = intro
 proj = $(parent)-$(pkg)
-version = $(shell $(SETUP) -configure | sed -n 's|Package version: [.]* \(.*\)|\1|p')
+version ?= 0.1.0
 
-help: 
+help:
 	@echo "##### subproject: $(proj) #####"
 	@echo "Usage: $(MAKE) [target] -- some valid targets:"
 	-@for fileX in $(MAKEFILE_LIST) `if [ -z "$(MAKEFILE_LIST)" ] ; then echo Makefile ; fi` ; do \
@@ -54,25 +37,11 @@ help:
 FMTS ?= tar.gz
 distdir = $(proj).$(version)
 
-install_files := $(install_files) src/$(parent)/META _build/src/$(parent)/*.cmi _build/src/$(parent)/*.cmo _build/src/$(parent)/*.cma
-optional_files := $(optional_files) _build/src/$(parent)/*.cmx _build/src/$(parent)/*.cmxa _build/src/$(parent)/*.cmxs
-
-uninstall install: 
-	-mkdir -p `opam config var lib`/$(parent)
-	-if [ "uninstall" = "$@" ] ; then \
-		ocamlfind remove -destdir `opam config var lib`/$(parent) $(pkg) ; \
-	else \
-		ocamlfind install -destdir `opam config var lib`/$(parent) $(pkg) \
-			$(install_files) -optional $(optional_files) -ldconf ignore ; \
-	fi
-	-cat `opam config var lib`/$(parent)/*/META \
-		> `opam config var lib`/$(parent)/META
-	-ocamlfind list | grep $(parent) ; sleep 2
-dist: 
+dist:
 	-@mkdir -p build/$(distdir) ; cp -f exclude.lst build/
 #	#-zip -9 -q --exclude @exclude.lst -r - . | unzip -od build/$(distdir) -
 	-tar --format=posix --dereference --exclude-from=exclude.lst -cf - . | tar -xpf - -C build/$(distdir)
-	
+
 	-@for fmt in `echo $(FMTS) | tr ',' ' '` ; do \
 		case $$fmt in \
 			zip) echo "### build/$(distdir).zip ###" ; \
@@ -85,7 +54,7 @@ dist:
 		esac \
 	done
 	-@rm -r build/$(distdir)
-report: 
+report:
 	-mkdir -p _build/cov
 	-bisect-report -I _build -html _build/cov/report_main `ls -t _build/bisect_main*.out | head -n1`
 	-bisect-report -I _build -html _build/cov/report_test `ls -t _build/bisect_test*.out | head -n1`
@@ -94,15 +63,10 @@ DEBUGGER = ddd --gdb        # lldb ; ddd --gdb; gdb
 # valgrind tools: memcheck helgrind cachegrind massif lackey
 VALGRIND = valgrind --verbose --tool=memcheck
 
-run: _build/src/$(parent)/main.byte
-#	export [DY]LD_LIBRARY_PATH=. # ([da|ba|z]sh Linux)
-#	setenv [DY]LD_LIBRARY_PATH . # (tcsh FreeBSD)
-	-BISECT_FILE=_build/bisect_main BOLT_CONFIG=resources/bolt_new.conf \
-		_build/src/$(parent)/main.byte $(ARGS)
-debug: _build/src/$(parent)/main.byte
+debug: _build/default/src/$(parent)/main.exe
 	-BISECT_FILE=_build/bisect_main $(DEBUGGER) \
-		_build/src/$(parent)/main.byte $(ARGS)
-valgrind: _build/src/$(parent)/main.native
-	-BISECT_FILE=_build/bisect_main $(VALGRIND) _build/src/$(parent)/main.native
+		_build/default/src/$(parent)/main.exe $(ARGS)
+valgrind: _build/default/src/$(parent)/main.exe
+	-BISECT_FILE=_build/bisect_main $(VALGRIND) _build/default/src/$(parent)/main.exe
 
 #-include Makefile-auxffi.mk
