--- a/app/dune-project
+++ b/app/dune-project
@@ -13,19 +13,22 @@
 (documentation "https://bitbucket.org/thebridge0491/intro_ml")
 
 (package
-	(name intro_ml-intro)
-	(tags (demo intro app))
-	(depopts
-		(odoc :build)
-		)
-	(depends
-		(dune (>= 1.10))
-    (bolt (>= 1.2))
+  (name intro_ml-intro)
+  (tags (demo intro app))
+  (depopts
+    (odoc (and :with-doc (>= 1.5.0)))
+    )
+  (depends
+    (dune (>= 1.10))
+    (volt (>= 1.2))
+    (ocaml-inifiles (>= 1.0))
     (yojson (>= 1.2))
     (ezjsonm (>= 0.4))
     (batteries (>= 2.2.0))
     (intro_ml-util (>= 0.1.0))
     (intro_ml-practice (>= 0.1.0))
-		)
-	(synopsis "Main app sub-package for OCaml Intro examples project.")
-	)
+    (ounit2 (and :with-test (>= 2.2.0)))
+    (qcheck (and :with-test (>= 0.13)))
+    )
+  (synopsis "Main app sub-package for OCaml Intro examples project.")
+  )
