--- a/common/src/intro_ml/dune
+++ b/common/src/intro_ml/dune
@@ -1,9 +1,9 @@
 (library
-	(public_name intro_ml-util)
-	(name util)
-	;(private_modules )
-	(libraries unix num str inifiles)
-	(synopsis "Utilites sub-package for OCaml Intro examples project.")
-	(ocamlopt_flags -thread -w +a-4 -w -a-27)
-	(ocamlc_flags -thread -w +a-4 -w -a-27)
-	)
+  (public_name intro_ml-util)
+  (name util)
+  ;(private_modules )
+  (libraries unix num str inifiles)
+  (synopsis "Utilities sub-package for OCaml Intro examples project.")
+  (ocamlopt_flags -thread -w +a-4 -w -a-27)
+  (ocamlc_flags -thread -w +a-4 -w -a-27)
+  )
