--- a/api/tests/dune
+++ b/api/tests/dune
@@ -1,6 +1,6 @@
 (test
 	(name ts_main)
-	(libraries unix num str threads oUnit qcheck bisect intro_ml-util intro_ml-practice)
+	(libraries unix num str threads ounit2 qcheck bisect intro_ml-util intro_ml-practice)
 	(ocamlopt_flags -thread -w +a-4 -w -a-27)
 	(ocamlc_flags -thread -w +a-4 -w -a-27)
 	(deps
