--- a/common/dune-project
+++ b/common/dune-project
@@ -13,17 +13,19 @@
 (documentation "https://bitbucket.org/thebridge0491/intro_ml")
 
 (package
-	(name intro_ml-util)
-	(tags (demo intro util))
-	(depopts
-		(odoc :build)
-		)
-	(depends
-		(dune (>= 1.10))
-		(bolt (>= 1.2))
+  (name intro_ml-util)
+  (tags (demo intro util))
+  (depopts
+    (odoc (and :with-doc (>= 1.5.0)))
+    )
+  (depends
+    (dune (>= 1.10))
+    (volt (>= 1.2))
     (ocaml-inifiles (>= 1.0))
     ;(ctypes (>= 0.4))
     ;(ctypes-foreign (>= 0.4))
-		)
-	(synopsis "Utilities sub-package for OCaml Intro examples project.")
-	)
+    (ounit2 (and :with-test (>= 2.2.0)))
+    (qcheck (and :with-test (>= 0.13)))
+    )
+  (synopsis "Utilities sub-package for OCaml Intro examples project.")
+  )
